# SnowClassifier

./: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml  requirements.txt  torch.sh
scripts/: cpu.sh  cuda.sh
snow_classifier/: __init__.py  fastvit.py  prepare_data.py  run.py  telegram_bot.py  train.py  utils.py  webscraper.py  yolo.py
